# uptime-pulse

./: .dockerignore  .prettierrc.js  AGENTS.md  CHANGELOG.md  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  compose.yaml  ecosystem.config.js  index.html  package-lock.json  package.json
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md  REVIEW_GUIDELINES.md  copilot-instructions.md  dependabot.yml
.github/ISSUE_TEMPLATE/: ask_for_help.yml  bug_report.yml  feature_request.yml  security_issue.yml
.github/workflows/: build-docker-push.yml  codeql-analysis.yml  conflict-labeler.yml  new-contributor-pr.yml  npm-update.yml  pr-description-check.yml  prevent-file-change.yml  publish-desktop-release.yml  release-desktop.yml  release-nightly.yml  stale-bot.yml
db/knex_migrations/: README.md
desktop/: index.html  package-lock.json  package.json
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  db.rs  lib.rs  scheduler.rs
docker/: debian-base.dockerfile  docker-compose-dev.yml  dockerfile
extra/: checkout-pr.mjs  close-incorrect-issue.js  deploy-demo-server.js  download-dist.js  generate-changelog.mjs  healthcheck.go  healthcheck.js  remove-2fa.js  reset-password.js
public/: manifest.json
server/: check-version.js  client.js  config.js  database.js  docker.js  embedded-mariadb.js  jobs.js  prometheus.js  proxy.js  radius-client.js  rate-limiter.js  server.js  setup-database.js  uptime-pulse-server.js  util-server.js
src/: util.js  util.ts
test/: test-radius.dockerfile
(+202 files in other folders)
